[tool.poetry]
name = "pytsviz"
version = "0.1.0"
description = ""
authors = ["Riccardo Maganza <riccardo.maganza@xtream>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
pandas = "^1.0.4"
plotly = "^4.8.1"
bokeh = "^2.0.2"
chartify = "^3.0.1"
scipy = "^1.4.1"
statsmodels = "^0.12.2"
matplotlib = "^3.2.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
commitizen = "^2.14.1"
pre-commit = "^2.4.0"
pytest = "^6.2.2"
pytest-cov = "^2.8.1"
sphinx = "^3.0.1"
isort = "^5.7.0"
ipykernel = "^5.3.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.7"
ipywidgets = ">=7.5"
notebook = "^6.0.3"
jupyter_nbextensions_configurator = "^0.4.1"
cite2c = "^0.2.1"
sphinx_rtd_theme = "^0.5.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
