[tool.poetry]
name = "pytsviz"
version = "0.1.0"
description = "A suite of tools to quickly analyze and visualize time series data."
license = "MIT"
authors = ["xtream <oss@xtreamers.io>", "Emanuele Fabbiani <emanuele.fabbiani@xtreamers.io>", "Gabriele Orlandi <gabriele.orlandi@xtreamers.io>", "Riccardo Maganza <riccardo.maganza@xtreamers.io>"]
maintainers = ["xtream <oss@xtreamers.io>", "Emanuele Fabbiani <emanuele.fabbiani@xtreamers.io>", "Riccardo Zoncada <riccardo.zoncada@xtreamers.io>"]
readme = "README.md"
homepage = "https://github.com/xtreamsrl/pytsviz"
repository = "https://github.com/xtreamsrl/pytsviz"
documentation = "https://pytsviz.readthedocs.io/en/latest/"
keywords = ["python", "data visualization", "time series", "data science"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
pandas = "^1.0.4"
plotly = "^4.8.1"
scipy = "^1.4.1"
statsmodels = "^0.12.2"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]
commitizen = "^2.14.1"
pre-commit = "^2.4.0"
pytest = "^6.2.2"
pytest-cov = "^2.8.1"
sphinx = "^3.0.1"
isort = "^5.7.0"
ipykernel = "^5.3.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.7"
ipywidgets = ">=7.5"
notebook = "^6.0.3"
jupyter_nbextensions_configurator = "^0.4.1"
sphinx-material = "^0.0.35"
nbsphinx = "^0.8.7"
pandoc = "^1.1.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.15.2"
sphinx-autodoc-typehints = "^1.12.0"
nbstripout = "^0.5.0"
black = "^21.9b0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/xtreamsrl/pytsviz/issues"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
